fix with class wrap more operation section

--- a/css/style.css
+++ b/css/style.css
@@ -384,7 +384,7 @@ li i.absolute{
 }
 
 section.questions li p{
-  margin-top: 1rem;
+  margin-top: 2rem;
 }
 
 section.questions li .fa-angle-up,
